--- a/img/contacte.html
+++ b/img/contacte.html
@@ -20,7 +20,7 @@
             </div>
             <ul class="menu">
                 <ul class="menu">
-                    <li><a href="principal.html">Pàgina principal</a></li>
+                    <li><a href="index.html">Pàgina principal</a></li>
                     <li><a href="serveis.html">Serveis</a></li>
                     <li><a href="productes.html">Productes</a></li>
                     <li><a href="contacte.html">Contacte</a></li>
