--- a/contacte.html
+++ b/contacte.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Digitalise / Contacte </title>
-    <link rel="stylesheet" href="contacte.css">    
+    <link rel="stylesheet" href="contacte.css">
+    <link rel="stylesheet" href="principal.css">
 </head>
+
 <body>
     <header>
         <div class="top-bar">
@@ -27,7 +30,7 @@
                 </ul>
             </ul>
         </nav>
-    </header> 
+    </header>
     <div class="container">
         <h2>Contacten's!</h2>
         <form action="https://formsubmit.co/digitalisemataro@gmail.com" method="POST">
@@ -49,4 +52,21 @@
         <p>gmail <img src="img/gmail.png">: digitalisemataro@gmail.com</p>
     </main>
 </body>
+<footer class="footer">
+    <div class="footer-left"></div>
+
+    <div class="footer-center">
+        <a href="terminos.html">Política Integrada</a>
+        <a href="avis.html">Avis Legal</a>
+        <a href="privacitat.html">Privacidad</a>
+        <a
+            href="https://www.instagram.com/digitalise_mataro?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Xarxes
+            Socials</a>
+    </div>
+
+    <div class="footer-right">
+        DIGITALISE ©2025
+    </div>
+</footer>
+
 </html>
