--- a/productes.html
+++ b/productes.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="productes.css">
     <script src="https://cdn.jsdelivr.net/gh/smx-m14/js@main/jquery.js "></script>
     <script src="idioma.js"></script>
+    <link rel="stylesheet" href="principal.css">
 </head>
 <body>
     <header>
@@ -90,5 +91,21 @@
             </div>
         </div>
     </section>
-</body>    
+</body>
+<footer class="footer">
+    <div class="footer-left"></div>
+
+    <div class="footer-center">
+        <a href="terminos.html">Política Integrada</a>
+        <a href="avis.html">Avis Legal</a>
+        <a href="privacitat.html">Privacidad</a>
+        <a
+            href="https://www.instagram.com/digitalise_mataro?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Xarxes
+            Socials</a>
+    </div>
+
+    <div class="footer-right">
+        DIGITALISE ©2025
+    </div>
+</footer>    
 </html>
