--- a/productes/disc.html
+++ b/productes/disc.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digitalise / Contacte</title>
-    <link rel="stylesheet" href="productes.css">    
+    <link rel="stylesheet" href="productes.css">
+    <link rel="stylesheet" href="../principal.css">
 </head>
 <body>
     <header>
@@ -55,4 +56,22 @@
         </div>
     </section>
 </body>
+<footer class="footer">
+    <div class="footer-left">
+    </div>
+
+    <div class="footer-center">
+        <a href="../terminos.html">Política Integrada</a>
+        <a href="../avis.html">Avis Legal</a>
+        <a href="../privacitat.html">Privacidad</a>
+        <a
+            href="https://www.instagram.com/digitalise_mataro?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Xarxes
+            Socials</a>
+    </div>
+
+    <div class="footer-right">
+        DIGITALISE ©2025
+    </div>
+</footer>
+
 </html>
