--- a/productes/ordinador.html
+++ b/productes/ordinador.html
@@ -23,6 +23,7 @@
                 <li><a href="../serveis.html">Serveis</a></li>
                 <li><a href="../productes.html">Productes</a></li>
                 <li><a href="../contacte.html">Contacte</a></li>
+                <link rel="stylesheet" href="../principal.css">
             </ul>
         </nav>
     </header>
@@ -64,4 +65,21 @@
         </div>
     </section>
 </body>
+<footer class="footer">
+    <div class="footer-left">
+    </div>
+
+    <div class="footer-center">
+        <a href="../terminos.html">Política Integrada</a>
+        <a href="../avis.html">Avis Legal</a>
+        <a href="../privacitat.html">Privacidad</a>
+        <a
+            href="https://www.instagram.com/digitalise_mataro?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Xarxes
+            Socials</a>
+    </div>
+
+    <div class="footer-right">
+        DIGITALISE ©2025
+    </div>
+</footer>
 </html>
