--- a/serveis.html
+++ b/serveis.html
@@ -56,4 +56,20 @@
         <p> Suscripció mensual on entra el manteniment del cablejat, manteniment dels equips informatics</p>
     </main>
 </body>
+<footer class="footer">
+    <div class="footer-left"></div>
+
+    <div class="footer-center">
+        <a href="terminos.html">Política Integrada</a>
+        <a href="avis.html">Avis Legal</a>
+        <a href="privacitat.html">Privacidad</a>
+        <a
+            href="https://www.instagram.com/digitalise_mataro?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Xarxes
+            Socials</a>
+    </div>
+
+    <div class="footer-right">
+        DIGITALISE ©2025
+    </div>
+</footer>
 </html>
