--- a/productes/ram.html
+++ b/productes/ram.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digitalise / Contacte</title>
     <link rel="stylesheet" href="productes.css">
+    <link rel="stylesheet" href="../principal.css">
 </head>
 
 <body>
@@ -69,5 +70,21 @@
         </div>
     </section>
 </body>
+<footer class="footer">
+    <div class="footer-left">
+    </div>
 
+    <div class="footer-center">
+        <a href="../terminos.html">Política Integrada</a>
+        <a href="../avis.html">Avis Legal</a>
+        <a href="../privacitat.html">Privacidad</a>
+        <a
+            href="https://www.instagram.com/digitalise_mataro?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Xarxes
+            Socials</a>
+    </div>
+
+    <div class="footer-right">
+        DIGITALISE ©2025
+    </div>
+</footer>
 </html>
