--- a/productes/ram/ramDDR2.html
+++ b/productes/ram/ramDDR2.html
@@ -58,7 +58,7 @@
         </div>
         <div class="enrereB">
             <a href="../ram.html">
-                <button class="enrere">Tornar a pàgina de Discs durs</button>
+                <button class="enrere">Tornar a pàgina de Ram</button>
             </a>
             <a href="../../productes.html">
                 <button class="enrere">Tornar a la pàgina principal</button>
