--- a/tiendaF.html
+++ b/tiendaF.html
@@ -39,10 +39,23 @@
     <div id="lista">
         <div class="container" id="l1">
             <h2>Productes</h2>
+            <main>
+                <p>
+                    Portátil empresarial Latitude 3420 de 14 pulgadas. - 260€
+                </p>
+                <img src="img/hp.png">
+
+            </main>
 
         </div>
         <div class="container" id="l2">
             <h2>Preu</h2>
+            <main>
+                <p>
+                    Portátil empresarial Latitude 3420 de 14 pulgadas. - 260€
+                </p>
+
+            </main>
 
             <button>Comprar productes</button>
         </div>
