--- a/contacte.html
+++ b/contacte.html
@@ -23,6 +23,7 @@
             </div>
             <ul class="menu">
                 <ul class="menu">
+                    <li><a href="tienda.html">Botiga</a></li>
                     <li><a href="index.html">Pàgina principal</a></li>
                     <li><a href="serveis.html">Serveis</a></li>
                     <li><a href="productes.html">Productes</a></li>
