--- a/productes.html
+++ b/productes.html
@@ -37,7 +37,7 @@
             <div class="producto">
                 <h3>RAM</h3>
                 <img src="img/ram.webp">
-                <p>Targetes de memoria.</p>
+                <p>Targetes de memòria.</p>
                 <a href="productes/ram.html">
                     <button>Més informació</button>
                 </a>  
