--- a/productes/ordinador.html
+++ b/productes/ordinador.html
@@ -55,7 +55,8 @@
                 <h3>Infinity Omega</h3>
                 <img src="../img/omega.png" alt="Producto 1">
                 <p>Infinity omega - Nox (negre o blanc).</p>
-                <button>Comprar - 32€</button>
+                
+                <button onclick="location.href='../tiendaFF.html'">Comprar - 32€</button>
             </div>
         </div>
         <h3>Components no incluits (Muntatge GRATUIT!)</h3>
