--- a/productes/ram.html
+++ b/productes/ram.html
@@ -52,7 +52,7 @@
             <div class="producto">
                 <h3>RAM DDR3</h3>
                 <img src="../img/DDR3.avif">
-                <a href="../prodcutes/ram/ramDDR3.html">
+                <a href="../productes/ram/ramDDR3.html">
                     <button class="enrere">Comprar</button>
                 </a>
             </div>
