--- a/serveis.html
+++ b/serveis.html
@@ -41,24 +41,31 @@
             reparacio completa del seu equip informatic, reparacio del sistema operatiu tant Windows com Ubuntu, canvi
             de components de portatil i ordinador de forma gratuita si son comprats a la nostre botiga.
         </p>
+        <a id="fotos">
+            <img src="img/manteniment.jpg">
+        </a>
     </main>
     <main>
         <h1>Implementament de les noves tecnologies</h1>
-        <p>Oferim els nostres serveis d'instalació dels equips tant en els components, cablejat electirc i de xarxa a
-            domicili ja sigui per un anvit laboral o personal.
-            Aquest pla el que vol oferir es una instalacio completa perque el teu local tingui tot el necesari per poder tenir un funcionament virtual complet.
+        <p>
+            Fem un manteniment complet de l'ordinador o portàtil que necessiti sigui de forma personal o per a la teva empresa, també oferim el material necessari per fer una reparació completa del seu equip informàtic, reparació del sistema operatiu tant Windows com Ubuntu, canvi de components de portàtil i ordinador de forma gratuïta sí que són comprats a la nostra botiga.
         </p>
+        <a id="fotos">
+            <img src="img/implementacion.jpg">
+        </a>
     </main>
     <main>
         <h1>Pàgina web</h1>
-        <p> Creació i publicació de la pagina web, oferim el hosting i informacio necesaria per poder crear la vostre
-            pagina web al vostre gust. Tot aixo s'ha de parlar ja sigui en presencial a la nostre botiga o pels telefons que es mostren a la part superior de la pàgina web.
-        </p>
+        <p> 
+           Creació i publicació de la pàgina web, oferim el hosting i informació necessària per poder crear la vostra pàgina web al vostre gust. Tot això s'ha de parlar ja sigui en presencial a la nostra botiga o pels telèfons que es mostren a la part superior de la pàgina web. </p>
+        <a id="fotos">
+            <img src="img/webbb.jpg">
+        </a>
     </main>
     <main>
         <h1>Pla mensual</h1>
-        <p> Suscripció mensual on entra el segur i el manteniment del cablejat, manteniment dels equips informatics per un preu mensual, on volem oferir que en cas de tenir cualsevol accident
-            puguis reparar el teu entorn de forma gratuïta.
+        <p> 
+            Subscripció mensual on entra el segur i el manteniment del cablejat, manteniment dels equips informàtics per un preu mensual, on volem oferir que en cas de tenir qualsevol accident puguis reparar el teu entorn de forma gratuïta.
         </p>
     </main>
 </body>
@@ -67,8 +74,8 @@
 
     <div class="footer-center">
         <a href="terminos.html">Política Integrada</a>
-        <a href="avis.html">Avis Legal</a>
-        <a href="privacitat.html">Privacidad</a>
+        <a href="avis.html">Avís Legal</a>
+        <a href="privacitat.html">Privacitat</a>
         <a
             href="https://www.instagram.com/digitalise_mataro?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Xarxes
             Socials</a>
