--- a/tiendaF.html
+++ b/tiendaF.html
@@ -41,7 +41,7 @@
             <h2>Productes</h2>
             <main>
                 <p>
-                    Portátil empresarial Latitude 3420 de 14 pulgadas. - 260€
+                    Portátil empresarial Latitude 3420 de 14 pulgadas. - 600€
                 </p>
                 <img src="img/hp.png">
 
@@ -52,12 +52,13 @@
             <h2>Preu</h2>
             <main>
                 <p>
-                    Portátil empresarial Latitude 3420 de 14 pulgadas. - 260€
+                    Portátil empresarial Latitude 3420 de 14 pulgadas. - 600€
                 </p>
 
             </main>
-
-            <button>Comprar productes</button>
+            <a href="zformulari.html">
+                <button>Comprar productes</button>
+            </a>
         </div>
     </div>
 
