--- a/tiendaFF.html
+++ b/tiendaFF.html
@@ -39,10 +39,36 @@
     <div id="lista">
         <div class="container" id="l1">
             <h2>Productes</h2>
+            <main>
+                <p>
+                    Portátil empresarial Latitude 3420 de 14 pulgadas. - 600€
+                </p>
+                <img src="img/hp.png">
+
+            </main>
+            <main>
+                <p>
+                    Infinity omega - Nox. - 32€
+                </p>
+                <img src="img/omega.png">
+
+            </main>
 
         </div>
         <div class="container" id="l2">
             <h2>Preu</h2>
+            <main>
+                <p>
+                    Portátil HP
+                </p>
+
+            </main>
+            <main>
+                <p>
+                    Infinity omega - Nox.
+                </p>
+
+            </main>
             <a href="zformulari.html">
                 <button>Comprar productes</button>
             </a>
